--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div>
+        <ul id="app" class="lista"></ul>
+    </div>
     <script src="./index.js" type="module"></script>
 </body>
 </html>
